data/issues_nolabel/nolabel_test_4127.txt
Tensorflow build from source fails with C++ compilation of rule '//tensorflow/core:framework_internal' failed: crosstool_wrapper_driver_is_not_gcc failed:

I am trying to build tensorflow from source (without external git access), can someone please let me know how to get this going, I have built most of the dependencies in a local system directory but end up with the following:
ERROR: /usr/local/tensorflow/tensorflow/core/BUILD:927:1: C++ compilation of rule '//tensorflow/core:framework_internal' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command
(cd /root/.cache/bazel/bazel_root/e86f6fce5559de9e3e13fb6adb66b858/execroot/tensorflow && 
exec env - 
PATH=/usr/local/tensorflow/protobuf/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/bin 
third_party/gpus/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIC -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections -g0 '-std=c++11' '-frandom-seed=bazel-out/host/bin/tensorflow/core/objs/framework_internal/tensorflow/core/example/feature_util.o' -iquote . -iquote bazel-out/host/genfiles -iquote external/protobuf -iquote bazel-out/host/genfiles/external/protobuf -iquote external/bazel_tools -iquote bazel-out/host/genfiles/external/bazel_tools -iquote external/highwayhash -iquote bazel-out/host/genfiles/external/highwayhash -iquote external/re2 -iquote bazel-out/host/genfiles/external/re2 -isystem external/protobuf/src -isystem bazel-out/host/genfiles/external/protobuf/src -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/highwayhash -isystem bazel-out/host/genfiles/external/highwayhash -isystem third_party/gpus/cuda/include -isystem bazel-out/host/genfiles/third_party/gpus/cuda/include -fno-exceptions -DEIGEN_AVOID_STL_ARRAY '-DGOOGLE_CUDA=1' -pthread '-DGOOGLE_CUDA=1' -no-canonical-prefixes -Wno-builtin-macro-redefined '-D__DATE="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' -fno-canonical-system-headers -MD -MF bazel-out/host/bin/tensorflow/core/_objs/framework_internal/tensorflow/core/example/feature_util.d -c tensorflow/core/example/feature_util.cc -o bazel-out/host/bin/tensorflow/core/_objs/framework_internal/tensorflow/core/example/feature_util.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/core/example/feature_util.cc: In function 'const typename tensorflow::internal::RepeatedFieldTrait::Type& tensorflow::GetFeatureValues(const string&, const tensorflow::Example&) [with FeatureType = long long int; typename tensorflow::internal::RepeatedFieldTrait::Type = google::protobuf::RepeatedField; std::string = std::basic_string]':
tensorflow/core/example/feature_util.cc:54:67: error: invalid initialization of reference of type 'const google::protobuf::RepeatedField&' from expression of type 'const google::protobuf::RepeatedField'
return example.features().feature().at(name).int64_list().value();
tensorflow/core/example/feature_util.cc: In function 'typename tensorflow::internal::RepeatedFieldTrait::Type* tensorflow::GetFeatureValues(const string&, tensorflow::Example) [with FeatureType = long long int; typename tensorflow::internal::RepeatedFieldTrait::Type = google::protobuf::RepeatedField; std::string = std::basic_string]':
tensorflow/core/example/feature_util.cc:62:23: error: cannot convert 'google::protobuf::RepeatedField' to 'google::protobuf::RepeatedField' in return
->mutable_value();
^
tensorflow/core/example/feature_util.cc: In function 'const typename tensorflow::internal::RepeatedFieldTrait::Type& tensorflow::GetFeatureValues(const string&, const tensorflow::Example&) [with FeatureType = long long int; typename tensorflow::internal::RepeatedFieldTrait::Typ
e = google::protobuf::RepeatedField; std::string = std::basic_string]':
tensorflow/core/example/feature_util.cc:55:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
tensorflow/core/example/feature_util.cc: In function 'typename tensorflow::internal::RepeatedFieldTrait::Type tensorflow::GetFeatureValues
(const string&, tensorflow::Example*) [with FeatureType = long long int; typename tensorflow::internal::RepeatedFieldTrait::Type = google::
protobuf::RepeatedField; std::string = std::basic_string]':
tensorflow/core/example/feature_util.cc:63:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
Target //tensorflow/cc:tutorials_example_trainer failed to build
Any pointers is greatly appreciated, not sure what I am missing here.
bash-4.2# cd /usr/local/
bazel-0.3.0 jpeg-9a libpng-1.2.53 tensorflow
eigen-eigen-9e1b48c333aa giflib-5.1.4
gmock-1.7.0 six-1.10.0 zlib-1.2.8
farmhash-34c13ddfab0e35422f4c3979f360635a8c050260
/usr/local/tensorflow
bash-4.2# ls
ACKNOWLEDGMENTS bazel-genfiles boost/ bzip2.BUILD gif.BUILD jpeg.BUILD navbar.md re2/ third_party zlib.BUILD
AUTHORS bazel-out boost.BUILD configure grpc.BUILD jsoncpp.BUILD png.BUILD README.md tools
avro.BUILD bazel-tensorflow boringssl.BUILD CONTRIBUTING.md highwayhash/ LICENSE protobuf/ RELEASE.md util
bazel-bin bazel-testlogs bower.BUILD farmhash.BUILD ISSUE_TEMPLATE.md nanopb.BUILD tensorflow WORKSPACE
workspace.bzl and CROSSTOOL have all the necessary entries for the include libraries and packages.